fix: overflow-x toolbar btns hacked to not show scrollbar on chrome
* Apparently chrome has difficulties with horizontal scrollbar visibility.
* now by default, the context toolbar container doesn't have
  `overflow-x` set to `auto` in css.
  * when ibgib page is shown, checks if has chrome in the user agent
    (`appVersion` since ionic overwrites the agent)
  * if chrome, then adds a touch event that triggers the scroll
  * if not chrome, immediately adds the scroll

--- a/ionic-gib/src/app/ibgib/ibgib.page.scss
+++ b/ionic-gib/src/app/ibgib/ibgib.page.scss
@@ -30,7 +30,8 @@ ion-menu-button:hover {
 }
 
 #context-btns {
-  overflow-x: auto;
+  // see hack in ibgib.page hackScrollButtonsListBecauseOfChromeBug function
+  // overflow-x: auto;
 }
 
 #container {
